# advent-of-code

./: .gitignore  LICENSE  README.md  requirements.txt
2023/: .gitignore  pyproject.toml
2023/.template/: README.md  cookiecutter.json
2023/01/: test_trebuchet.py  trebuchet.py
2023/02/: cube_conundrum.py  test_cube_conundrum.py
2023/03/: gear_ratios.py  gear_ratios_two.py  helpers.py  test_gear_ratios.py  test_gear_ratios_two.py
2023/04/: scratchcards.py  test_scratchcards.py
2023/05/: seeds.py  test_seeds.py
2023/06/: README.md  boat_race.py
2023/07/: camel_cards.py  test_camel_cards.py
2023/08/: haunted_wasteland.py  haunted_wasteland_ghosts.py  test_haunted_wasteland.py
2023/09/: mirage_maintenance.py  test_mirage_maintenance.py
2023/10/: pipe_maze.py  test_pipe_maze.py
2023/11/: cosmic_expansion.py  test_cosmic_expansion.py
2023/12/: hot_springs.py  test_hot_springs.py
2023/13/: point_of_incidence.py  test_point_of_incidence.py
2023/14/: parabolic_reflector_dish.py  test_parabolic_reflector_dish.py
2023/15/: lens_library.py  test_lens_library.py
2023/16/: test_the_floor_will_be_lava.py  the_floor_will_be_lava.py
2023/17/: clumsy_crucible.py
2023/18/: lavaduct_lagoon.py  test_lavaduct_lagoon.py
2023/19/: aplenty.py  test_aplenty.py
2023/20/: pulse_propagation.py  test_pulse_propagation.py
2023/21/: step_counter.py  test_step_counter.py
2024/: pyproject.toml
2024/01/: historian_hysteria.py
2024/02/: red_nosed_reports.py
2024/03/: mull_it_over.py
2024/04/: ceres_search.py
2024/05/: print_queue.py
(+11 files in other folders)
