[tool.poetry]
name = "advent of code 2024"
version = "0.1.0"
description = "My Advent of Code solutions in 2024"
authors = ["dprochazka"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
cookiecutter = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
